--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.90.0"
   },
   "devDependencies": {
+    "@types/node": "^25.2.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.19",
